--- a/index.html
+++ b/index.html
@@ -46,7 +46,12 @@
           <div id="home" class="content-region hide">
             <h2>Home</h2>
             <p>
-              This is a simple website template published with Github Pages. <a href="https://github.com/cpl-makerlab/simple-website-template">Fork this repository</a> to create your own site!
+              O objetivo deste projeto foi criar uma solução em C# onde possamos agendar salas por voz usando as tecnologias da Microsoft cognitive services e a API da da DevScope como por exemplo:
+              •	Speech to texto
+              •	Text to speech
+              •	CLU (Conversational Language Understanding)
+              Onde iremos falar destas diferentes tecnologias nos tópicos seguintes 
+
             </p>
           </div>
           
