--- a/index.html
+++ b/index.html
@@ -60,10 +60,9 @@
           </div>
           
           <div id="about" class="content-region hide">
-            <h2>About</h2>
-            <p>
-              Sed tempus urna et pharetra pharetra massa massa ultricies. Porttitor rhoncus dolor purus non enim praesent. Id aliquet risus feugiat in ante metus dictum. 
-            </p>
+            <h2>download</h2>
+            <a href ="https://raw.githubusercontent.com/joaogomes2000/simple-website-template/gh-pages/Relat%C3%B3rio%20final_com_correcoes.docx"> Relatório</a>
+            <a href =""> Atas </a>
           </div>
           
           <div id="contact" class="content-region hide">
