--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           
           <div id="about" class="content-region hide">
             <h2>download</h2>
-            <a href ="https://raw.githubusercontent.com/joaogomes2000/simple-website-template/gh-pages/Relat%C3%B3rio%20final_com_correcoes.docx"> Relatório </a>
+            <a href ="https://raw.githubusercontent.com/joaogomes2000/simple-website-template/gh-pages/Relatorio_final.zip"> Relatório </a>
             <br>
             <a href =""> Atas </a>
           </div>
