--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <div id="home" class="content-region hide">
             <h2>Home</h2>
             <p>
-              <i class="fa-brands fa-linkedin"></i>
+             <a> <i class="fa-brands fa-linkedin"></i> olá isto é um teste </a>
               O objetivo deste projeto foi criar uma solução em C# onde possamos agendar salas por voz usando as tecnologias da Microsoft cognitive services e a API da da DevScope como por exemplo:
               <br>
               •	Speech to texto
