--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
    
     <!-- Custom styles -->
     <link href="style.css" rel="stylesheet" type="text/css" />
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>    
 
@@ -46,7 +46,7 @@
           <div id="home" class="content-region hide">
             <h2>Home</h2>
             <p>
-             <a> <i class="fa-brands fa-linkedin"></i> olá isto é um teste </a>
+             <i class="fa fa-linkedin-square fa_custom"></i>
               O objetivo deste projeto foi criar uma solução em C# onde possamos agendar salas por voz usando as tecnologias da Microsoft cognitive services e a API da da DevScope como por exemplo:
               <br>
               •	Speech to texto
