--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
           <div id="home" class="content-region hide">
             <h2>Home</h2>
             <p>
-             <i class="fa fa-linkedin-square fa_custom"></i>
               O objetivo deste projeto foi criar uma solução em C# onde possamos agendar salas por voz usando as tecnologias da Microsoft cognitive services e a API da da DevScope como por exemplo:
               <br>
               •	Speech to texto
@@ -70,7 +69,8 @@
           <div id="contact" class="content-region hide">
             <h2>Contact</h2>
             <p>
-              Pellentesque nec nam aliquam sem et tortor consequat. Quisque sagittis purus sit amet volutpat consequat. Magna eget est lorem ipsum dolor. 
+               <a href="https://www.linkedin.com/in/joao-gomes-712b74251/"> <i class="fa fa-linkedin-square fa_custom fa-2x"></i> </a>
+              <a><i> </i></a>
             </p>
           </div>
           
