--- a/index.html
+++ b/index.html
@@ -54,20 +54,17 @@
               <br>
               •	CLU (Conversational Language Understanding)
               <br>
-              Onde iremos falar destas diferentes tecnologias nos tópicos seguintes 
-
+              •	API rooms (API fornecida pela DevScope)
             </p>
           </div>
           
           <div id="about" class="content-region hide">
-            <h2>download</h2>
+            <h2>Download</h2>
             <a href ="https://raw.githubusercontent.com/joaogomes2000/simple-website-template/gh-pages/Relatorio_final.zip"> Relatório </a>
-            <br>
-            <a href =""> Atas </a>
           </div>
           
           <div id="contact" class="content-region hide">
-            <h2>Contact</h2>
+            <h2>Contactos</h2>
             <p>
                <a href="https://www.linkedin.com/in/joao-gomes-712b74251/"> <i class="fa fa-linkedin-square fa_custom fa-2x"></i> </a>
               <a><i> </i></a>
