--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </div>
 
     <footer>  
-      Footer region
+     Feito por: João Gomes
     </footer>
     
     <!-- Load additional JS scripts here -->
