--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
               •	CLU (Conversational Language Understanding)
               <br>
               •	API rooms (API fornecida pela DevScope)
+              <br>
+              O objetivo do projeto é permitir a marcação de salas através de comandos de voz, proporcionando uma forma intuitiva e conveniente para os utilizadores agendarem salas.
+              A solução utiliza o reconhecimento de fala para capturar os comandos de voz dos utilizadores, o processamento de linguagem natural para interpretar a intenção do utilizador e a API Rooms para verificar a disponibilidade das salas e efetuar o agendamento.
+              Esta abordagem proporciona uma experiência do utilizador melhorada e elimina a necessidade de interações manuais ou de digitação no processo de marcação de salas.
             </p>
           </div>
           
