--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div id="content"> 
           
           <div id="home" class="content-region hide">
-            <h2>Home</h2>
+            <h2>Introdução</h2>
             <p>
               O objetivo deste projeto foi criar uma solução em C# onde possamos agendar salas por voz usando as tecnologias da Microsoft cognitive services e a API da da DevScope como por exemplo:
               <br>
