--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
               <br>
               •	API rooms (API fornecida pela DevScope)
               <br>
-              proporcionando uma forma intuitiva e conveniente para os utilizadores agendarem salas.<br>
-              A solução utiliza o reconhecimento de fala para capturar os comandos de voz dos utilizadores, o processamento de linguagem natural para interpretar a intenção do utilizador e a API Rooms para verificar a disponibilidade das salas e efetuar o agendamento.<br>
+              proporcionando uma forma intuitiva e conveniente para os utilizadores agendarem salas.
+              A solução utiliza o reconhecimento de fala para capturar os comandos de voz dos utilizadores, o processamento de linguagem natural para interpretar a intenção do utilizador e a API Rooms para verificar a disponibilidade das salas e efetuar o agendamento.
               Esta abordagem proporciona uma experiência do utilizador melhorada e elimina a necessidade de interações manuais ou de digitação no processo de marcação de salas.
             </p>
           </div>
