--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
             <h2>Contactos</h2>
             <p>
                <a href="https://www.linkedin.com/in/joao-gomes-712b74251/"> <i class="fa fa-linkedin-square fa_custom fa-2x"></i> </a>
-              <a><i> </i></a>
+
+              <a><i href="fa-mail-forward"> </i></a>
             </p>
           </div>
           
