--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
           <div id="contact" class="content-region hide">
             <h2>Contactos</h2>
             <p>
-               <a href="https://www.linkedin.com/in/joao-gomes-712b74251/"> <i class="fa fa-linkedin-square fa_custom fa-2x"></i> </a>
+               <a href="https://www.linkedin.com/in/joao-gomes-712b74251/"> <i class="fa fa-linkedin-square fa_custom fa-2x"></i> 
+              linkedin: João Gomes
+              </a>
               <br>
               <a href="mailto:ispg2020101077@ispgaya.pt" style="text-align: center;"><i class="fa fa-envelope-square fa_custom fa-2x" aria-hidden="true"></i>
               email: ispg2020101077@ispgaya.pt
