--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <body>
 
     <header id="header">
-      <img src="logo.jpg" style="align-content: center;">
+      <img src="logo.jpg">
       <h1>Digital Contact Center</h1>
       
       <!-- Menu link fragment #id should match a div id. Example: <a href="#home"> links to <div id="home"></div>  -->
