--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
   <body>
 
     <header id="header">
-      <img src="logo.jpg">
+      <div class="logo-container">
+        <img src="logo.jpg" class="logo">
+      </div>
       <h1>Digital Contact Center</h1>
       
       <!-- Menu link fragment #id should match a div id. Example: <a href="#home"> links to <div id="home"></div>  -->
