--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
       <div class="logo-container">
         <img src="logo.jpg" class="logo">
       </div>
-      <h1>Digital Contact Center</h1>
-      
+      <div class="title">
+        <h1>Digital Contact Center</h1>
+      </div>
       <!-- Menu link fragment #id should match a div id. Example: <a href="#home"> links to <div id="home"></div>  -->
       <ul class="main-menu">
         <li><a href="#home">home</a></li>
